# cc-talk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yaml
cc_talk_cli/: Cargo.toml
cc_talk_cli/src/: coinselector.rs  hopper.rs  lib.rs  main.rs
cc_talk_codegen/: Cargo.toml
cc_talk_codegen/src/: lib.rs
cc_talk_codegen/tests/: 01-parses.rs  02-simple-poll.rs  suite.rs
cc_talk_codegen/tests/no_compile/: enum-fails.rs  enum-fails.stderr  union-fails.rs  union-fails.stderr
cc_talk_core/: Cargo.toml
cc_talk_core/src/: commands.rs  common.rs  lib.rs  log.rs
cc_talk_core/src/commands/: command.rs  core.rs  core_plus.rs  device.rs  multi_drop.rs
cc_talk_core/src/commands/core/: core_commands.rs
cc_talk_core/src/commands/core_plus/: core_plus_commands.rs
cc_talk_core/src/commands/device/: device_commands.rs
cc_talk_core/src/commands/multi_drop/: multi_drop_commands.rs
cc_talk_core/src/common/: bill_event_types.rs  bill_routing.rs  bit_mask.rs  category.rs  changer_device.rs  changer_error.rs  changer_flags.rs  changer_status.rs  checksum.rs  coin_acceptor_errors.rs  coin_calibration_codes.rs  coin_event.rs  coin_value_format.rs  command.rs  currency.rs  data_storage.rs  date.rs  device.rs  escrow_status.rs  fault_code.rs  hopper_flags.rs  hopper_status.rs  lamp_control.rs  manufacturers.rs  option_flags.rs  packet.rs  power_option.rs  teach_mode_status.rs
cc_talk_core/src/serde/: deserializer.rs  serializer.rs
cc_talk_device/: Cargo.toml
cc_talk_device/src/: device_impl.rs  lib.rs  log.rs  payout_device.rs
cc_talk_host/: Cargo.toml
cc_talk_host/src/: device.rs  lib.rs  log.rs
cc_talk_host/src/commands/: command.rs  core.rs  core_plus.rs  device.rs  multi_drop.rs
cc_talk_host/src/commands/core/: core_commands.rs
cc_talk_host/src/commands/core_plus/: core_plus_commands.rs
cc_talk_host/src/commands/device/: device_commands.rs
cc_talk_host/src/commands/multi_drop/: multi_drop_commands.rs
cc_talk_tokio_host/: Cargo.toml
cc_talk_tokio_host/examples/: README.md  bill_validator.rs  coin_validator.rs  currency_acceptor_pool.rs  hopper_dispense.rs  payout_pool.rs  payout_pool_two_hoppers.rs  payout_sensor_pool.rs  retrieve_hopper_info.rs
cc_talk_tokio_host/src/: device.rs  lib.rs  transport.rs  util.rs
cc_talk_tokio_host/src/device/: base.rs  bill_validator.rs  coin_validator.rs  currency_acceptor_pool.rs  payout.rs  payout_pool.rs  payout_sensor_pool.rs
cc_talk_tokio_host/src/device/currency_acceptor_pool/: builder.rs  config.rs  device_id.rs  mod.rs  poll_result.rs  pool.rs
cc_talk_tokio_host/src/device/payout_pool/: builder.rs  config.rs  error.rs  event.rs  mod.rs  poll_result.rs  pool.rs  pool_sensor.rs
cc_talk_tokio_host/src/device/payout_sensor_pool/: builder.rs  error.rs  event.rs  pool.rs
cc_talk_tokio_host/src/transport/: retry.rs  tokio_transport.rs  transport.rs
script/: socat.sh
