[package]
name = "cc_talk_cli"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

cc_talk_core = { version = "0.0.2", path = "../cc_talk_core", features = [
  "std",
] }
cc_talk_host = { version = "0.0.2", path = "../cc_talk_host", features = [
  "tracing",
  "std",
] }

cc_talk_tokio_host = { version = "0.0.3", path = "../cc_talk_tokio_host" }

tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
