[package]
name = "cc_talk_codegen"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/suite.rs"

[dependencies]
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["extra-traits"] }
quote = "1.0.42"

cc_talk_core = { path = "../cc_talk_core", default-features = false }
