[package]
name = "cc_talk_core"
version = "0.0.3"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Kosta S. <github.operation464@simplelogin.com>"]
description = "A no-std implementation of the CCtalk protocol."
keywords = ["no-std", "ccTalk", "protocol"]
repository = "https://github.com/Kosta-Git/cc-talk-rs/"
readme = "../README.md"
exclude = [".gitignore"]

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[features]
default = []
crc-lookup = []
std = []
defmt = ["dep:defmt"]

[dependencies]
heapless = { version = "0.9.2" }
defmt = { version = "1.0.1", optional = true }
thiserror = { version = "2.0.17" }
