[package]
name = "cc_talk_device"
version = "0.0.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Kosta S. <github.operation464@simplelogin.com>"]
description = "ccTalk device crate based on cc_talk_core"
keywords = ["no-std", "ccTalk", "protocol"]
repository = "https://github.com/Kosta-Git/cc-talk-rs/"
readme = "../README.md"
exclude = [".gitignore"]


[dependencies]
cc_talk_core = { version = "0.0.2", path = "../cc_talk_core", default-features = false }

defmt = { version = "1.0.1", optional = true }
tracing = { version = "0.1.41", optional = true }
heapless = { version = "0.8.0" }

[features]
default = []

defmt = ["dep:defmt", "cc_talk_core/defmt"]
tracing = ["dep:tracing"]
