[package]
name = "cc_talk_host"
version = "0.1.0"
edition = "2024"

[dependencies]
cc_talk_core = { path = "../cc_talk_core", default-features = false }

defmt = { version = "1.0.1", optional = true }
tracing = { version = "0.1.37", optional = true }
heapless = { version = "0.8.0" }

[features]
default = []
std = ["cc_talk_core/std"]

defmt = ["dep:defmt", "cc_talk_core/defmt"]
tracing = ["dep:tracing"]
