[package]
name = "cc_talk_host"
version = "0.0.4"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kosta S. <github.operation464@simplelogin.com>"]
description = "ccTalk host crate based on cc_talk_core"
keywords = ["no-std", "ccTalk", "protocol"]
repository = "https://github.com/Kosta-Git/cc-talk-rs/"
readme = "../README.md"
exclude = [".gitignore"]

[dependencies]
cc_talk_core = { path = "../cc_talk_core", default-features = false, version = "0.0.4" }

defmt = { version = "1.0.1", optional = true }
tracing = { version = "0.1.44", optional = true }
heapless = { version = "0.9.2" }
thiserror = { version = "2.0.18", default-features = false }

[features]
default = []
std = ["cc_talk_core/std"]

defmt = ["dep:defmt", "cc_talk_core/defmt"]
tracing = ["dep:tracing"]
