[package]
name = "cc_talk_tokio_host"
version = "0.1.0"
edition = "2024"

[[example]]
name = "retrieve_hopper_info"

[[example]]
name = "hopper_dispense"

[[example]]
name = "coin_validator"

[[example]]
name = "bill_validator"

[dependencies]
cc_talk_core = { path = "../cc_talk_core", features = ["std"] }
cc_talk_host = { path = "../cc_talk_host", features = ["tracing", "std"] }

tokio = { version = "1.47.0", features = [
  "full", # TODO: Find out which features are actually needed
] }
tracing = { version = "0.1.41" }
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.19" }
