[package]
name = "cc_talk_tokio_host"
version = "0.0.3"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kosta S. <github.operation464@simplelogin.com>"]
description = "ccTalk tokio crate based on cc_talk_host, it provides a tokio-based transport implementation"
keywords = ["no-std", "ccTalk", "protocol"]
repository = "https://github.com/Kosta-Git/cc-talk-rs/"
readme = "../README.md"
exclude = [".gitignore"]

[[example]]
name = "retrieve_hopper_info"

[[example]]
name = "hopper_dispense"

[[example]]
name = "coin_validator"

[[example]]
name = "bill_validator"

[[example]]
name = "currency_acceptor_pool"

[dependencies]
cc_talk_core = { path = "../cc_talk_core", features = ["std"] }
cc_talk_host = { path = "../cc_talk_host", features = ["tracing", "std"] }

tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.20.0"
tracing-subscriber = { version = "0.3.20" }
