[package]
name = "cc_talk_tokio_host"
version = "0.0.5"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Kosta S. <github.operation464@simplelogin.com>"]
description = "ccTalk tokio crate based on cc_talk_host, it provides a tokio-based transport implementation"
keywords = ["no-std", "ccTalk", "protocol"]
repository = "https://github.com/Kosta-Git/cc-talk-rs/"
readme = "../README.md"
exclude = [".gitignore"]

[[example]]
name = "retrieve_hopper_info"

[[example]]
name = "hopper_dispense"

[[example]]
name = "coin_validator"

[[example]]
name = "bill_validator"

[[example]]
name = "currency_acceptor_pool"

[dependencies]
cc_talk_core = { path = "../cc_talk_core", features = [
  "std",
], version = "0.0.4" }
cc_talk_host = { path = "../cc_talk_host", features = [
  "tracing",
  "std",
], version = "0.0.4" }

tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.41" }
thiserror = "2.0.18"
derive_builder = "0.20.2"

[dev-dependencies]
tempfile = "3.25.0"
tracing-subscriber = { version = "0.3.22" }
